--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.6.2"
